--- a/geppetto/Views/Storyboards/geppetto/Base.lproj/Discover.storyboard
+++ b/geppetto/Views/Storyboards/geppetto/Base.lproj/Discover.storyboard
@@ -19,43 +19,44 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RN1-Hq-0WY">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ueg-Yx-fCS">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="289"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ueg-Yx-fCS">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="305"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Section Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5F-Fm-hZZ">
-                                                <rect key="frame" x="16" y="0.0" width="398" height="23"/>
+                                                <rect key="frame" x="16" y="0.0" width="382" height="23"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pUg-VU-vPH">
-                                                <rect key="frame" x="16" y="39" width="398" height="250"/>
+                                                <rect key="frame" x="0.0" y="39" width="414" height="266"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qXS-bw-v16">
-                                                        <rect key="frame" x="0.0" y="0.0" width="1096" height="250"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qXS-bw-v16">
+                                                        <rect key="frame" x="0.0" y="0.0" width="1132" height="266"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8XX-Rf-u7Y" customClass="Card" customModule="geppetto" customModuleProvider="target">
-                                                                <rect key="frame" x="0.0" y="0.0" width="360" height="250"/>
+                                                                <rect key="frame" x="16" y="0.0" width="360" height="266"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="360" id="v0I-Hv-xsG"/>
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T10-dD-mWB" customClass="Card" customModule="geppetto" customModuleProvider="target">
-                                                                <rect key="frame" x="368" y="0.0" width="360" height="250"/>
+                                                                <rect key="frame" x="386" y="0.0" width="360" height="266"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="360" id="Wp2-he-ua4"/>
                                                                 </constraints>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lul-ME-IkW" customClass="Card" customModule="geppetto" customModuleProvider="target">
-                                                                <rect key="frame" x="736" y="0.0" width="360" height="250"/>
+                                                                <rect key="frame" x="756" y="0.0" width="360" height="266"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="360" id="9gh-i7-2V6"/>
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
+                                                        <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="16" bottom="0.0" trailing="16"/>
                                                     </stackView>
                                                 </subviews>
                                                 <constraints>
@@ -69,7 +70,10 @@
                                                 <viewLayoutGuide key="frameLayoutGuide" id="oAc-Cv-C7B"/>
                                             </scrollView>
                                         </subviews>
-                                        <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="16" bottom="0.0" trailing="0.0"/>
+                                        <constraints>
+                                            <constraint firstItem="p5F-Fm-hZZ" firstAttribute="leading" secondItem="ueg-Yx-fCS" secondAttribute="leading" constant="16" id="Iwa-By-NfF"/>
+                                            <constraint firstItem="pUg-VU-vPH" firstAttribute="leading" secondItem="ueg-Yx-fCS" secondAttribute="leading" id="Mot-5N-c4o"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
