Fiz o scroll horizontal com cards de atividades com os dados do Mock de atividades

--- a/geppetto/Views/Storyboards/geppetto/Base.lproj/Discover.storyboard
+++ b/geppetto/Views/Storyboards/geppetto/Base.lproj/Discover.storyboard
@@ -98,6 +98,9 @@
                     </view>
                     <navigationItem key="navigationItem" title="Discover" id="Afs-wN-mj1"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="stack" destination="qXS-bw-v16" id="ty9-hP-Tgm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dnZ-oo-M6P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
