--- a/geppetto/Views/Components/Card.xib
+++ b/geppetto/Views/Components/Card.xib
@@ -11,7 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Card" customModule="geppetto" customModuleProvider="target">
             <connections>
                 <outlet property="cardView" destination="iN0-l3-epB" id="AKm-4t-uoS"/>
+                <outlet property="descriptionLabel" destination="Dhb-Tm-Cfk" id="8DA-qd-xeS"/>
+                <outlet property="footnoteLabel" destination="Pgv-eU-eom" id="gvg-ed-GAY"/>
                 <outlet property="image" destination="WmG-Ws-HHg" id="LdX-9P-jfk"/>
+                <outlet property="titleLabel" destination="Gre-fY-YDy" id="8No-pc-nKh"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
