--- a/geppetto/Views/Storyboards/ActivityOverview.storyboard
+++ b/geppetto/Views/Storyboards/ActivityOverview.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2p-EQ-uKY" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="538.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="549.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="47u-7P-1ot">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="256"/>
@@ -35,7 +36,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="znL-kT-26G">
-                                                <rect key="frame" x="124" y="318" width="166.5" height="14.5"/>
+                                                <rect key="frame" x="140" y="318" width="134" height="14.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jrv-YQ-e9f">
                                                         <rect key="frame" x="0.0" y="0.0" width="47" height="14.5"/>
@@ -51,12 +52,6 @@
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ihp-pc-7j9">
                                                         <rect key="frame" x="113" y="0.0" width="21" height="14.5"/>
-                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cost" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rl-HI-7Sh">
-                                                        <rect key="frame" x="142" y="0.0" width="24.5" height="14.5"/>
                                                         <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -88,8 +83,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SfA-eM-F41">
-                                                <rect key="frame" x="183.5" y="508.5" width="47" height="30"/>
-                                                <state key="normal" title="Dive In"/>
+                                                <rect key="frame" x="16" y="508.5" width="382" height="41"/>
+                                                <color key="backgroundColor" name="AccentColor"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                <inset key="contentEdgeInsets" minX="0.0" minY="12" maxX="0.0" maxY="12"/>
+                                                <state key="normal" title="Dive In">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="enterActivityButtonTapped" destination="F1H-G2-Zap" eventType="touchDown" id="vJy-F2-7Bw"/>
                                                 </connections>
@@ -101,6 +101,7 @@
                                             <constraint firstItem="bfj-2L-7Rz" firstAttribute="leading" secondItem="v2p-EQ-uKY" secondAttribute="leading" constant="16" id="0Lu-p5-hnY"/>
                                             <constraint firstAttribute="bottom" secondItem="SfA-eM-F41" secondAttribute="bottom" id="12V-OO-cJe"/>
                                             <constraint firstItem="l45-P5-0L3" firstAttribute="centerX" secondItem="v2p-EQ-uKY" secondAttribute="centerX" id="4Zg-EL-VMj"/>
+                                            <constraint firstItem="SfA-eM-F41" firstAttribute="leading" secondItem="v2p-EQ-uKY" secondAttribute="leading" constant="16" id="5dI-L1-3Mm"/>
                                             <constraint firstItem="Bcs-Ht-KoQ" firstAttribute="centerX" secondItem="v2p-EQ-uKY" secondAttribute="centerX" id="608-gk-yNs"/>
                                             <constraint firstItem="Xxa-aj-GST" firstAttribute="top" secondItem="Bcs-Ht-KoQ" secondAttribute="bottom" constant="24" id="Bcm-Xi-ZIo"/>
                                             <constraint firstItem="bfj-2L-7Rz" firstAttribute="top" secondItem="zWZ-BW-HAC" secondAttribute="bottom" constant="8" id="CaZ-on-UQr"/>
@@ -146,7 +147,6 @@
                     <navigationItem key="navigationItem" title="Activity" largeTitleDisplayMode="never" id="VPt-Yq-5cJ"/>
                     <connections>
                         <outlet property="age" destination="Ihp-pc-7j9" id="9JG-dq-WS9"/>
-                        <outlet property="cost" destination="1rl-HI-7Sh" id="HKe-6h-b2G"/>
                         <outlet property="difficulty" destination="xmo-kf-uAV" id="ckO-q2-bxe"/>
                         <outlet property="duration" destination="Jrv-YQ-e9f" id="K53-c5-BGB"/>
                         <outlet property="enterActivityStepsButton" destination="SfA-eM-F41" id="AlP-wA-4as"/>
@@ -161,6 +161,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="1" green="0.58399999141693115" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
