--- a/geppetto/Views/Storyboards/ActivityStep.storyboard
+++ b/geppetto/Views/Storyboards/ActivityStep.storyboard
@@ -32,7 +32,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-as-X68">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jiq-as-X68">
                                 <rect key="frame" x="0.0" y="44" width="414" height="256"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="256" id="Jew-es-EqZ"/>
